--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                     </div>
                     <hr>
                     <div class="second-image">
-                        <img src="./images/facebook.png" alt="">
+                        <img src="./images/fb.png" alt="">
                         <img src="./images/insta.png" alt="">
-                        <img src="./images/telegram.png" alt="">
-                        <img src="./images/linkdin.png" alt="">
+                        <img src="./images/link.png" alt="">
+                        <!-- <img src="./images/linkdin.png" alt=""> -->
                     </div>
 
 
